feat: add fanta project

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>React Router and Advanced Concepts</title>
   </head>
-  <body>
+  <body class="h-screen w-screen">
     <div id="root"></div>
   </body>
 </html>
